--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,9 @@
-plugins:
-  - jekyll-remote-theme
-
-remote_theme: vszhub/not-pure-poole
-
 # Setup
-title: Xu Liu (Lexi)
-description: 
-url: https://lexiliu392.github.io/lexilxu/
-avatar: /profile.JPG
-paginate: 
+title: Not Pure Poole
+description: A simple, beautiful, and powerful Jekyll theme for blogs
+url: https://vszhub.github.io
+avatar: /avatar.jpeg
+paginate: 5
 permalink: pretty
 cover_image: /bg.jpeg
 
@@ -56,3 +51,9 @@ sass:
 
 # Replace this value and uncomment to enable Disqus
 # disqus: xxxxxx
+
+# Specify the author for blog posts
+author:
+  name: Songzi Vong
+  url: https://github.com/vszhub/
+  email: vszhub@gmail.com
