--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://vszhub.github.io
-avatar: /avatar.jpeg
+title: Xu Liu (Lexi)
+description: MPhil in Risk Management Science, CUHK
+url: https://lexiliu392.github.io/lexilxu/
+avatar: /profile.JPG
 paginate: 5
 permalink: pretty
 cover_image: /bg.jpeg
@@ -53,7 +53,3 @@ sass:
 # disqus: xxxxxx
 
 # Specify the author for blog posts
-author:
-  name: Songzi Vong
-  url: https://github.com/vszhub/
-  email: vszhub@gmail.com
