--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: Xu Liu (Lexi)
-description: MPhil in Risk Management Science, CUHK
+description: MPhil in Risk Management Science (Expected 2023), CUHK
 url: https://lexiliu392.github.io/lexilxu/
 avatar: /profile.JPG
 paginate: 5
