--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - title: Research
-  url: /
- - title: Teaching
-  url: /
+  url: /research/
+- title: Teaching
+  url: /teaching/
 - title: About
   url: /about/
