--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Xu Liu (Lexi)
 description: MPhil in Risk Management Science (Expected 2023), CUHK
 url: https://lexiliu392.github.io/lexilxu/
 avatar: /profile.JPG
-paginate: 5
+# paginate: 5
 permalink: pretty
 cover_image: /bg.jpg
 
