--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: MPhil in Risk Management Science (Expected 2023), CUHK
 url: https://lexiliu392.github.io/lexilxu/
 avatar: /profile.JPG
 # paginate: 5
-permalink: /index/
+permalink: /home
 cover_image: /bg.jpg
 
 # Gems
