--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title: Xu Liu (Lexi) 刘栩
+title: Xu Liu (Lexi)
 description: M.Phil. in Risk Management Science (Expected 2023), CUHK
 url: https://lexiliu392.github.io/lexilxu/
 avatar: /profile.JPG
