--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: Xu Liu (Lexi)
 description: M.Phil. in Risk Management Science (Expected 2023), CUHK
-url: https://lexiliu392.github.io/lexilxu/
+url: https://lexiliu392.github.io/lexilxu/home/
 avatar: /profile.JPG
 # paginate: 5
 permalink: /home
