--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
-- title: About
-  url: /about/
 - title: Research
   url: /research/
 - title: Teaching
   url: /teaching/
 - title: Sharing
   url: /sharing
+- title: Contact
+  url: /contact
