--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://lexiliu392.github.io/lexilxu/home/
 avatar: /profile.JPG
 paginate: 5
 permalink:  pretty
-cover_image: /bigbg.jpg
+cover_image: /bluebg.jpg
 
 # Gems
 plugins:
