--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: Xu Liu (Lexi)
 description: M.Phil. in Risk Management Science (Expected 2023), CUHK
-url: https://lexilxu.github.io/lexilxu/
+url: https://lexilxu.github.io/MyPage/
 avatar: /profile.JPG
 paginate: 5
 permalink:  pretty
